Fix color button sizing
So colors and focus rings don't overlap.

--- a/scss/elements/_colorPicker.scss
+++ b/scss/elements/_colorPicker.scss
@@ -1,5 +1,5 @@
 color-picker {
-	button {
+	.button {
 		width: 38px;
 		height: 24px;
 		appearance: none;
